fix overflow layout

--- a/src/components/login/style.module.scss
+++ b/src/components/login/style.module.scss
@@ -1,5 +1,5 @@
 .com-login {
-  @apply relative h-full;
+  @apply h-full;
 }
 .container {
   @apply relative h-full items-center overflow-clip p-4 md:p-0;
